# freshet

./: .gitignore  BRIEF.md  DRILLS.md  LICENSE  Makefile  README.md  RESULTS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
beacon/: BRIEF.md  Makefile  README.md  docker-compose.yml
beacon/common/: schemas.py
beacon/generator/: generator.py
beacon/pipeline/: consumer_helloworld.py
db/: init.sql
docs/: autopilot-loop.tape  hardening-plan.md  live-demo-storyboard.md  record-ui.js
freshet/: Makefile  README.md  docker-compose.yml  requirements-test.txt  requirements.txt
freshet/api/: agent.py  app.py  composer.py  multiquery.py  rerank.py  retrieval.py  synthesis.py
freshet/autopilot/: __main__.py  brief.py  consumer.py  impact.py  investigate.py
freshet/common/: db.py  kafka_io.py  schemas.py
freshet/connectors/: base.py  github.py  webhook.py
freshet/eval/: agent_eval.py  answer_eval.py  batch_baseline.py  drills.py  freshness.py  impact_eval.py  judge.py  labeled.py  metrics.py  modes.py  multiquery_eval.py  plots.py  real_eval.py  rootcause.py  run_eval.py
freshet/generator/: __main__.py  generator.py  impact_scenarios.py  scenarios.py
freshet/ingest/: status_poller.py
freshet/pipeline/: chunking.py  consumer_helloworld.py  deadletter.py  embedder.py  embedding.py  incidents.py  lifecycle.py  metrics.py  normalizer.py
freshet/tests/: test_generator.py  test_schema.py
observability/: prometheus.yml
results/: agent_eval.json  agent_transcript.md  answer_eval.json  impact_metrics.json  multiquery_eval.json  real_eval.json  retrieval_metrics.json  retrieval_metrics_minilm.json  rootcause_eval.json
scripts/: calibrate_abstention.py  fetch_real_incidents.py  make_hero_plot.py  run_agent_demo.py  run_connector_demo.sh  run_demo.sh  run_embedding_compare.py  run_live_demo.sh  run_rootcause_demo.sh  run_rootcause_facevalidity.sh  run_scaling_demo.sh  run_slack_demo.sh  run_slice.sh
tasks/: lessons.md
tests/: test_agent_eval.py  test_agent_loop.py  test_agent_tools.py  test_answer_eval.py  test_api.py  test_archetypes.py  test_autopilot_brief.py  test_autopilot_duration.py  test_autopilot_handler.py  test_batch_baseline.py  test_benchmark.py  test_chunking.py  test_commit_type.py  test_composer.py  test_connectors_github.py  test_connectors_webhook.py  test_corpus.py  test_deadletter.py  test_embedder.py  test_embedding.py  test_encode_query.py  test_facevalidity_abstains.py  test_freshness.py  test_generator.py  test_hard_benchmark.py  test_impact.py  test_impact_benchmark.py  test_impact_eval.py  test_incidents.py  test_incidents_endpoint.py  test_judge.py  test_labeled_auto.py  test_lifecycle_event.py  test_metrics.py  test_modes.py  test_multiquery.py  test_multiquery_eval.py  test_narrative.py  test_normalizer.py  test_plots.py  (+20 more)
tests/integration/: conftest.py  test_autopilot_e2e.py  test_autopilot_gather.py  test_autopilot_impact.py  test_autopilot_postmortem.py  test_commit_signal.py  test_db.py  test_eval.py  (+8 more)
(+22 files in other folders)
