[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "freshet"
version = "0.1.0"
description = "Freshness-first streaming-RAG system for on-call engineers"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "confluent-kafka>=2",
    "psycopg[binary,pool]>=3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
embed = ["sentence-transformers>=2"]
llm = ["anthropic>=0.40"]
eval = ["matplotlib>=3.7"]
test = ["pytest>=8", "httpx>=0.27", "ruff", "mypy"]
slack = ["slack_sdk>=3"]

[tool.setuptools.packages.find]
include = ["freshet*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires the docker-compose stack (broker + Postgres)",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E9,F stay the CI gate (syntax, undefined names, unused). The rest add value
# without style churn: bugbear (real bug patterns), import order, comprehension
# and simplification cleanups, and pyupgrade modernization. E501 is intentionally
# off — many long lines are SQL and docstrings where wrapping hurts readability.
select = ["E4", "E7", "E9", "F", "W", "I", "B", "C4", "SIM", "UP"]
# E501: long lines are intentional in SQL/docstrings. B008: `Depends(...)` in a
# default is the FastAPI idiom, not a bug. UP042: the schema enums are
# deliberately `(str, Enum)` — `StrEnum` changes `__str__`/JSON output.
ignore = ["E501", "B008", "UP042"]

[tool.mypy]
# Scoped to the package (tests/scripts are intentionally loosely typed). Third-party
# libs without stubs (confluent_kafka, sentence_transformers, matplotlib, slack_sdk)
# are ignored; the codebase itself type-checks clean.
files = ["freshet"]
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
# Scripts and eval entrypoints prepend to sys.path or lazy-import behind a
# runtime guard before importing freshet — E402 is expected there.
"scripts/*" = ["E402"]
"freshet/eval/real_eval.py" = ["E402"]
